--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'maven'
 
 group='com.codeborne'
 archivesBaseName = 'geoip'
-version='1.3'
+version='1.4'
 
 compileJava.options.debugOptions.debugLevel = "source,lines,vars"
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 defaultTasks 'test', 'install'
 
@@ -27,7 +27,7 @@ repositories {
 }
 
 dependencies {
-  testCompile 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.13.1'
 }
 
 task libs(type: Sync) {
@@ -50,13 +50,13 @@ jar {
   manifest {
     attributes(
       "Implementation-Title": project.group + '.' + project.name,
-      "Implementation-Version": version,
+      "Implementation-Version": archiveVersion,
       "Implementation-Vendor": "Codeborne")
   }
 }
 
 task sourcesJar(type: Jar, dependsOn:classes) {
-  classifier = 'sources'
+  archiveClassifier = 'sources'
   from sourceSets.main.allSource
 }
 
@@ -65,7 +65,7 @@ javadoc {
 }
 
 task javadocJar(type: Jar, dependsOn:javadoc) {
-  classifier = 'javadoc'
+  archiveClassifier = 'javadoc'
   from javadoc.destinationDir
 }
 
