--- a/deploy.gradle
+++ b/deploy.gradle
@@ -31,11 +31,11 @@ uploadArchives {
                }
 
                licenses {
-                   license {
-                       name 'LGPL 3.0'
-                       url 'http://www.gnu.org/licenses/lgpl.html'
-                       distribution 'repo'
-                   }
+                 license {
+                   name 'MIT'
+                   url 'https://opensource.org/licenses/MIT'
+                   distribution 'repo'
+                 }
                }
 
                developers {
